<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                style="@style/Text_14pt"
                android:layout_marginTop="5dp"
                android:text="@string/choose_period"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal">
            </TextView>
            <TextView
                style="@style/Text12pt"
                android:layout_marginTop="15dp"
                android:text="@string/first_date" />
            <EditText
                style="@style/EditText"
                android:id="@+id/edit_first_date"
                android:hint="@string/first_date">
            </EditText>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view">
            </View>
            <TextView
                style="@style/Text12pt"
                android:layout_marginTop="10dp"
                android:text="@string/last_date" />
            <EditText
                style="@style/EditText"
                android:id="@+id/edit_last_date"
                android:hint="@string/last_date">
            </EditText>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view">
            </View>
            <Button
                style="@style/button"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/show_st"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_red"
                android:textColor="@color/red"
                android:id="@+id/show_stat"
                android:layout_gravity="center_horizontal" />

            <TextView
                style="@style/zone_text"
                android:text="@string/max"
                android:background="@color/max"
                android:gravity="center_vertical" />
            <TextView
                style="@style/zone_text_desc"
                android:text="@string/max_desc"/>
            <TextView
                style="@style/zone_text"
                android:text="@string/anaerobic"
                android:background="@color/anaer"/>
            <TextView
                style="@style/zone_text_desc"
                android:text="@string/anaer_desc"/>
            <TextView
                style="@style/zone_text"
                android:text="@string/aerobic"
                android:background="@color/aerobic"/>
            <TextView
                style="@style/zone_text_desc"
                android:text="@string/aerobic_desc"/>
            <TextView
                style="@style/zone_text"
                android:text="@string/fat"
                android:background="@color/fat"/>
            <TextView
                style="@style/zone_text_desc"
                android:text="@string/fat_desc"/>
            <TextView
                style="@style/zone_text"
                android:text="@string/recovery"
                android:background="@color/recov"/>
            <TextView
                style="@style/zone_text_desc"
                android:text="@string/recovery_desc"/>
            <TextView
                style="@style/zone_text"
                android:text="@string/rest​"
                android:background="@color/rest"/>
            <TextView
                style="@style/zone_text_desc"
                android:text="@string/rest_desc"/>
            <TextView
                style="@style/zone_text"
                android:text="@string/slow"
                android:background="@color/slow"/>
            <TextView
                style="@style/zone_text_desc"
                android:text="@string/slow_desc"/>
            <TextView
                style="@style/zone_text"
                android:text="@string/bradycardia​"
                android:background="@color/brad"/>
            <TextView
                style="@style/zone_text_desc"
                android:text="@string/brad_desc"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>